# auraflow

./: .env.example  .gitignore  CLAUDE.md  README.md  dload.toml  flake.nix  omnirun.toml  pyproject.toml
docs/: architecture.md  speaker.md  viz.md
docs/research/: auralization-reference.md  bpm-model-reference.md  bpm-rotor-application.md  cfd-ecosystem-survey.md  cfd-fwh-reference.md  cona-external-formulations.md  cona-reference.md  dji-9450-reference.md  fwh-rotor-sim-audit.md  jasa-datagen-reference.md  jaxfluids-evaluation.md  nasa-1pax-vehicle.md
examples/data/: README.md
scripts/: body_flyby_demo.py  cfd_jasa_flyover.py  cfd_pulse_validation.py  cona_vs_cfd.py  drone_flyover_demo.py  egonoise_generate.py  egonoise_gpu_job.sh  jasa_generate.py  rotor_resolved_smoke.py  speaker_demo.py  viz_demo_cfd.py  viz_demo_flyover.py  viz_rotor_spin.py
src/auraflow/: __init__.py
tests/: conftest.py  test_import.py
tests/bemt/: test_acoustics.py  test_inflow.py  test_solver.py  test_unsteady.py
tests/body/: test_airfoil_profile.py  test_blade_mesh.py  test_gates.py  test_io.py  test_mesh.py  test_motion.py  test_sdf.py  test_sdf_compose.py  test_sdf_jax.py  test_sources.py  test_speaker.py
tests/cfd/: test_body_case.py  test_case.py  test_flyover.py  test_flyover_memory.py  test_pulse_e2e.py  test_rotor_levelset.py  test_sphere.py  test_variable_rpm.py
tests/cona/: test_airloads.py  test_auralize.py  test_bpm.py  test_broadband.py  test_flight.py  test_gusts.py  test_tonal.py  test_unsteady_aero.py  test_wake.py
tests/core/: test_airfoil.py  test_blade.py  (+2 more)
(+76 files in other folders)
