[project]
name = "auraflow"
version = "0.1.0"
description = "Differentiable aeroacoustics simulations in JAX: fast approximate rotor-noise models (BEMT, CONA) and full CFD + permeable-surface FW-H"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.4.35",
    "numpy>=2.0",
    "scipy>=1.14",
    "equinox>=0.11",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.9",
]
cfd = [
    "jaxfluids",
]
data = [
    "dload-ml>=0.3.0",
]
# GPU workers (omnirun colab/kaggle/slurm jobs): CUDA-enabled jax.
# Never install locally -- the dev box is CPU-only.
gpu = [
    "jax[cuda12]>=0.4.35",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "pytest-xdist>=3.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auraflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "NPY"]

[tool.basedpyright]
include = ["src", "tests"]
typeCheckingMode = "standard"

[tool.uv.sources]
jaxfluids = { git = "https://github.com/tumaer/JAXFLUIDS", rev = "cb46ed6" }
